--- a/views/partials/cookie-preview.hbs
+++ b/views/partials/cookie-preview.hbs
@@ -1,4 +1,4 @@
-{{log cookie}}
 {{#with cookie}}
-<div class="cookie-preview" style="background: {{#each addons}}url('/assets/images/{{.}}.png'),{{/each}} url('/assets/images/empty-{{base}}.png')"></div>
+    <div class="cookie-preview" style="background: {{#each
+            addons}}url('/assets/images/{{.}}.png'),{{/each}} url('/assets/images/empty-{{base}}.png')"></div>
 {{/with}}
