--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -7,12 +7,17 @@
 <h2>Select yur favorite addons</h2>
 
 {{#each addons}}
-    <a href="/configurator/add-added/{{this.[0]}}">Add {{this.[0]}} for {{this.[1]}} PLN</a>
+
+        <a href="/configurator/add-addon/{{this.[0]}}" class="btn {{#if (isInArray @root.cookie.addons this.[0])}}
+            btn-disabled
+        {{/if}}">Add {{this.[0]}} for {{this.[1]}} PLN</a>
+
 {{/each}}
 
 {{#if cookie.base}}
     {{> cookie-preview }}
     {{>addons }}
+    <a href="/order/summary" class="btn btn-big">Order now!</a>
 {{else}}
     <p><strong> Please select base of your cookie to see it`s preview and price summary</strong></p>
     {{> base-selector}}
