--- a/views/partials/base-selector.hbs
+++ b/views/partials/base-selector.hbs
@@ -1,3 +1,3 @@
-<p>{{#each bases}}
+<p>{{#each allBases}}
     <a href="/configurator/select-base/{{this.[0]}}" class="btn">Select {{this.[0]}} for {{this.[1]}} PLN</a>
 {{/each}}</p>
